--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Portfolio de Yakhya TIMURKAEV</title>
+    <title>Yakhya TIMURKAEV | Développeur Web Junior</title>
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -45,10 +46,10 @@
         <div class="container">
             <h2 class="section-title reveal-on-scroll">À propos de moi</h2>
             <p class="reveal-on-scroll">
-                Âgé de 19 ans (né le 6 août 2006), je suis un jeune passionné par l'informatique et les nouvelles
-                technologies,
-                particulièrement attiré par le développement web. Actuellement en première année de BTS SIO, je suis
-                curieux, motivé et toujours prêt à relever de nouveaux défis pour acquérir de nouvelles compétences.
+                Je m'appelle Yakhya TIMURKAEV, j'ai 19 ans et je suis passionné par la création de solutions numériques.
+                Actuellement en première année de BTS SIO option SLAM, je me spécialise dans le développement
+                d'applications. Mon objectif est de transformer des idées complexes en applications web intuitives et
+                performantes. Curieux et rigoureux, j'aime apprendre et relever de nouveaux défis techniques.
             </p>
         </div>
     </section>
@@ -63,6 +64,7 @@
                 <div class="skill-card"><i class="fab fa-js"></i><span>JavaScript</span></div>
                 <div class="skill-card"><i class="fab fa-php"></i><span>PHP</span></div>
                 <div class="skill-card"><i class="fas fa-database"></i><span>MySQL</span></div>
+                <div class="skill-card"><i class="fab fa-git-alt"></i><span>Git</span></div>
             </div>
         </div>
     </section>
@@ -101,6 +103,14 @@
             <div class="projects-grid reveal-on-scroll">
                 <div class="project-card">
                     <div class="project-info">
+                        <h3>Ce Portfolio</h3>
+                        <p>Le site que vous consultez actuellement, réalisé pour présenter mon profil et mes
+                            compétences.</p>
+                        <span>HTML, CSS, JavaScript</span>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-info">
                         <h3>Site Météo</h3>
                         <p>Une application web simple pour consulter la météo en temps réel, utilisant une API
                             externe.</p>
@@ -135,13 +145,13 @@
             <div class="experience-grid reveal-on-scroll">
                 <div class="experience-card">
                     <h3>Vendeur en magasin alimentaire</h3>
-                    <p>J'ai occupé ce poste dans deux magasins, ce qui m'a permis de développer mon sens du service
-                        client, ma rigueur et ma capacité à travailler en équipe.</p>
+                    <p>Ce poste m'a permis de développer d'excellentes compétences en communication, le sens du service
+                        client et une grande rigueur dans la gestion des tâches quotidiennes.</p>
                 </div>
                 <div class="experience-card">
-                    <h3>Stagiaire polyvalent</h3>
-                    <p>Lors de stages chez Casino et Chaussea, j'ai pu observer le fonctionnement d'une grande surface
-                        de l'intérieur, en touchant à la logistique, la gestion des stocks et la vente.</p>
+                    <h3>Stagiaire polyvalent (Casino, Chaussea)</h3>
+                    <p>Mes stages m'ont offert une vision complète du fonctionnement d'une entreprise, de la logistique
+                        à la vente, renforçant ma capacité d'adaptation et mon esprit d'équipe.</p>
                 </div>
             </div>
         </div>
@@ -154,8 +164,7 @@
         <p class="reveal-on-scroll">N'hésitez pas à me contacter pour toute question ou opportunité.</p>
         <div class="contact-info reveal-on-scroll">
             <div class="email-contact">
-                <a href="mailto:yakhyatimurkaev2006@gmail.com?subject=Contact%20depuis%20le%20site&body=Bonjour%20%2C%0A%0AJ'aimerais%20vous%20contacter%20pour%20..."
-                   rel="noopener noreferrer">
+                <a href="mailto:yakhyatimurkaev2006@gmail.com?subject=Contact%20depuis%20le%20site&body=Bonjour%20%2C%0A%0AJ'aimerais%20vous%20contacter%20pour%20...">
                     <i class="fas fa-envelope"></i> yakhyatimurkaev2006@gmail.com
                 </a>
                 <button aria-label="Copier l'email" class="copy-email-btn">
@@ -165,11 +174,15 @@
             <span><i class="fas fa-phone"></i> 07 49 49 00 12</span>
         </div>
         <div class="social-links reveal-on-scroll">
-            <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/yakhya2006" rel="noopener noreferrer" target="_blank"><i
+                    class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/yakhya-timurkaev-7730032ba" rel="noopener noreferrer"
+               target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
 </footer>
+
+<a aria-label="Retour en haut" class="back-to-top" href="#"><i class="fas fa-arrow-up"></i></a>
 
 <script src="./portfolio.js"></script>
 </body>
